Azure Blob Storage Support (#71)
- Add jars to support azure blob storage
- Add `wasbs-site.xml` template
- Add profiles to support Azure Blob Storage (wasb(s) - only SSL version is supported)
- Add performance test for Azure Blob Storage
- Add support in automation for `wasbs` protocol

--- a/concourse/pipelines/perf_pipeline.yml
+++ b/concourse/pipelines/perf_pipeline.yml
@@ -322,6 +322,7 @@ jobs:
       BENCHMARK_ADL: {{perf-benchmark-adl}}
       BENCHMARK_S3: {{perf-benchmark-s3}}
       BENCHMARK_GPHDFS: {{perf-benchmark-gphdfs}}
+      BENCHMARK_WASB: {{perf-benchmark-wasb}}
       ADL_ACCOUNT: {{adl-account}}
       ADL_CLIENT_ID: {{adl-client-id}}
       ADL_CREDENTIAL: {{adl-credential}}
@@ -329,4 +330,6 @@ jobs:
       AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
       AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
       AWS_DEFAULT_REGION: {{aws-region}}
+      WASB_ACCOUNT_NAME: {{wasb-account-name}}
+      WASB_ACCOUNT_KEY: {{wasb-account-key}}
       TARGET_OS: centos
