--- a/concourse/settings/perf-settings-500g.yml
+++ b/concourse/settings/perf-settings-500g.yml
@@ -24,6 +24,7 @@ perf-trigger-stop: 12:40 PM
 perf-benchmark-adl: false
 perf-benchmark-s3: false
 perf-benchmark-gphdfs: false
+perf-benchmark-wasb: false
 
 job-name: perf-multi-node-500G
 
