--- a/automation/pom.xml
+++ b/automation/pom.xml
@@ -225,6 +225,13 @@
             <version>2.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>azure-storage</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+
         <!-- HADOOP Dependencies -->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -235,6 +242,12 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-aws</artifactId>
+            <version>${hdp.hadoop.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-azure</artifactId>
             <version>${hdp.hadoop.version}</version>
         </dependency>
 
