--- a/concourse/settings/perf-settings-50g.yml
+++ b/concourse/settings/perf-settings-50g.yml
@@ -26,7 +26,8 @@ perf-trigger-stop: 12:40 PM
 
 perf-benchmark-adl: false
 perf-benchmark-s3: true
-perf-benchmark-gphdfs: false
+perf-benchmark-gphdfs: true
+perf-benchmark-wasb: true
 
 job-name: perf-multi-node-50G
 
