--- a/concourse/settings/perf-settings.yml
+++ b/concourse/settings/perf-settings.yml
@@ -25,3 +25,4 @@ perf-trigger-stop: 12:40 PM
 perf-benchmark-adl: true
 perf-benchmark-s3: true
 perf-benchmark-gphdfs: true
+perf-benchmark-wasb: true
