--- a/server/build.gradle
+++ b/server/build.gradle
@@ -115,6 +115,9 @@ project('pxf') {
         bundleJars "com.amazonaws:aws-java-sdk-core:${awsJavaSdk}"
         bundleJars "com.amazonaws:aws-java-sdk-kms:${awsJavaSdk}"
         bundleJars "com.amazonaws:aws-java-sdk-s3:${awsJavaSdk}"
+        // Azure Data Blob
+        bundleJars "org.apache.hadoop:hadoop-azure:${hadoopVersion}"
+        bundleJars "com.microsoft.azure:azure-storage:2.2.0"
         // Azure Datalake jars
         bundleJars "org.apache.hadoop:hadoop-azure-datalake:${hadoopVersion}"
         bundleJars "com.microsoft.azure:azure-data-lake-store-sdk:2.2.3"
