--- a/server/build.gradle
+++ b/server/build.gradle
@@ -73,7 +73,7 @@ allprojects {
             force "commons-codec:commons-codec:1.4"
             force "commons-collections:commons-collections:3.2.1"
             force "commons-logging:commons-logging:1.1.3"
-            force "org.apache.avro:avro:1.7.4"
+            force "org.apache.avro:avro:1.7.7"
             force "org.apache.zookeeper:zookeeper:3.4.6"
             force "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
             force "junit:junit:${junitVersion}"
@@ -99,6 +99,13 @@ allprojects {
             exclude 'tomcat-catalina-*'
             exclude 'pxf-*'
         }
+    }
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
     }
 }
 
@@ -159,16 +166,21 @@ project('pxf-hbase') {
 project('pxf-hdfs') {
     dependencies {
         compile(project(':pxf-api'))
-        compile "org.apache.avro:avro-mapred:1.7.4"
+        compile "org.apache.avro:avro-mapred:1.7.7"
         compile "org.apache.hadoop:hadoop-mapreduce-client-core:${hadoopVersion}"
         compile "org.apache.hadoop:hadoop-yarn-api:${hadoopVersion}" // Kerberos dependency
         compile "org.apache.hadoop:hadoop-common:${hadoopVersion}"
         compile "org.apache.htrace:htrace-core4:${htraceVersion}"
         compile "org.apache.hadoop:hadoop-hdfs:${hadoopVersion}"
         compile "org.apache.hadoop:hadoop-hdfs-client:${hadoopVersion}"
-        compile "org.apache.parquet:parquet-hadoop-bundle:${parquetVersion}"
+        compile "org.apache.parquet:parquet-format:2.4.0"
+        compile "org.apache.parquet:parquet-column:${parquetVersion}"
+        compile "org.apache.parquet:parquet-common:${parquetVersion}"
+        compile "org.apache.parquet:parquet-encoding:${parquetVersion}"
+        compile "org.apache.parquet:parquet-generator:${parquetVersion}"
+        compile "org.apache.parquet:parquet-hadoop:${parquetVersion}"
 
-        bundleJars "org.apache.avro:avro:1.7.4"
+        bundleJars "org.apache.avro:avro:1.7.7"
     }
 }
 
@@ -243,7 +255,6 @@ project('pxf-service') {
         providedCompile "org.apache.hadoop:hadoop-hdfs-client:${hadoopVersion}"
         providedCompile "org.apache.tomcat:tomcat-catalina:$tomcatVersion"
 
-
         bundleJars "org.apache.hadoop:hadoop-auth:${hadoopVersion}"
         bundleJars "commons-cli:commons-cli:1.2"
         bundleJars "commons-io:commons-io:2.4"
@@ -255,7 +266,6 @@ project('pxf-service') {
         bundleJars "com.google.protobuf:protobuf-java:2.5.0"
         bundleJars "org.slf4j:slf4j-api:1.7.10"
         bundleJars "org.slf4j:slf4j-log4j12:1.7.10"
-
     }
 }
 
