--- a/concourse/settings/perf-settings-50g.yml
+++ b/concourse/settings/perf-settings-50g.yml
@@ -26,6 +26,7 @@ perf-trigger-stop: 12:40 PM
 
 perf-benchmark-adl: false
 perf-benchmark-s3: true
+perf-benchmark-gcs: true
 perf-benchmark-gphdfs: true
 perf-benchmark-wasb: true
 
