--- a/concourse/settings/perf-settings-500g.yml
+++ b/concourse/settings/perf-settings-500g.yml
@@ -1,21 +1,23 @@
+# 500G Perf Pipeline Settings
 tf-bucket-path: clusters-google/
 tf-cloud-provider: google
 folder-prefix: perf
 perf-scale: 500
 
 enable-impersonation-multinode: true
-pxf-jvm-opts: "-Xmx2g -Xms4g"
-perf-ccp-reap-minutes: 480
+pxf-jvm-opts: "-Xmx8g -Xms4g"
+perf-ccp-reap-minutes: 120
 
-perf-gpdb-number-of-nodes: 21
+perf-gpdb-number-of-nodes: 16
 perf-gpdb-segments-per-host: 8
 perf-gpdb-instance-type: n1-highmem-8
+perf-gpdb-disk-size: 200
 
-perf-hadoop-number-of-nodes: 30
+perf-hadoop-number-of-nodes: 25
 perf-hadoop-initialization-script: gs://pxf-perf/scripts/update-site-core.sh
-perf-hadoop-initialization-script-timeout: 5400
+perf-hadoop-initialization-script-timeout: 360
 perf-hadoop-instance-type: n1-standard-2
-perf-hadoop-disk-size: 64
+perf-hadoop-disk-size: 400
 
 perf-trigger-interval: 720h
 perf-trigger-start: 12:30 PM
@@ -28,5 +30,3 @@ perf-benchmark-gphdfs: false
 perf-benchmark-wasb: false
 
 job-name: perf-multi-node-500G
-
-perf-gpdb-disk-size: 100
