--- a/concourse/settings/perf-settings-500g.yml
+++ b/concourse/settings/perf-settings-500g.yml
@@ -24,7 +24,7 @@ perf-trigger-start: 11:00 PM
 perf-trigger-stop: 11:10 PM
 
 perf-benchmark-adl: false
-perf-benchmark-s3: false
+perf-benchmark-s3: true
 perf-benchmark-gcs: false
 perf-benchmark-gphdfs: false
 perf-benchmark-wasb: false
