Always run as a different UGI (#75)
* Added CloudAccessTest to automation to run for S3 pipeline job
* Always doAs in SecurityServletFilter to bypass HDFS FileSystem cache
* Create a remoteUser when impersonation is disabled instead of a proxy user
* Add automation tests for Cloud Access when HDFS is configured for PXF

When default is non-empty and is configured to use HDFS we test the
following:

- No Server, No Credentials defined fails on configuration mismatch
- Server, No Credentials when s3-site.xml exists succeeds
- Server, No Credentials when s3-site.xml does not exist fails with no
  credentials error
- No Server, Credentials fails on configuration mismatch
- Server, No Credentials, Invalid Config fails with no credentials error
- Server, Credentials, Invalid Config succeeds (credentials take
  precendence over config file)


Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>
Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/automation/Makefile
+++ b/automation/Makefile
@@ -31,12 +31,12 @@ ifneq "$(PROTOCOL)" ""
 	PROTOCOL_HOME=~/pxf/servers/$(PROTOCOL)
 endif
 
-ifneq "$(AWS_ACCESS_KEY_ID)" ""
-	MAVEN_TEST_OPTS+= -DAWS_ACCESS_KEY_ID=$(AWS_ACCESS_KEY_ID)
+ifneq "$(ACCESS_KEY_ID)" ""
+	MAVEN_TEST_OPTS+= -DAWS_ACCESS_KEY_ID=$(ACCESS_KEY_ID)
 endif
 
-ifneq "$(AWS_SECRET_ACCESS_KEY)" ""
-	MAVEN_TEST_OPTS+= -DAWS_SECRET_ACCESS_KEY=$(AWS_SECRET_ACCESS_KEY)
+ifneq "$(SECRET_ACCESS_KEY)" ""
+	MAVEN_TEST_OPTS+= -DAWS_SECRET_ACCESS_KEY=$(SECRET_ACCESS_KEY)
 endif
 
 ifeq "$(PXF_TEST_DEBUG)" "true"
@@ -83,13 +83,15 @@ ifneq "$(PROTOCOL)" ""
 		cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)/; \
 		cp $(PXF_HOME)/templates/user/templates/mapred-site.xml $(PROTOCOL_HOME)/; \
 		if [[ $(PROTOCOL) == s3 ]]; then \
-			if [[ -z "$(AWS_ACCESS_KEY_ID)" ]] || [[ -z "$(AWS_SECRET_ACCESS_KEY)" ]]; then \
-				echo "AWS Keys (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY) not set"; \
+		    mkdir -p $(PROTOCOL_HOME)-invalid; \
+		    cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)-invalid/; \
+			if [[ -z "$(ACCESS_KEY_ID)" ]] || [[ -z "$(SECRET_ACCESS_KEY)" ]]; then \
+				echo "AWS Keys (ACCESS_KEY_ID, SECRET_ACCESS_KEY) not set"; \
 				rm -rf $(PROTOCOL_HOME); \
 				exit 1; \
 			fi; \
-			sed -i "s|YOUR_AWS_ACCESS_KEY_ID|$(AWS_ACCESS_KEY_ID)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
-			sed -i "s|YOUR_AWS_SECRET_ACCESS_KEY|$(AWS_SECRET_ACCESS_KEY)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
+			sed -i "s|YOUR_AWS_ACCESS_KEY_ID|$(ACCESS_KEY_ID)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
+			sed -i "s|YOUR_AWS_SECRET_ACCESS_KEY|$(SECRET_ACCESS_KEY)|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
 		fi; \
 		if [[ $(PROTOCOL) == adl ]]; then \
 			if [[ -z "$(ADL_ACCOUNT)" ]] || [[ -z "$(ADL_REFRESH_URL)" ]] || [[ -z "$(ADL_CLIENT_ID)" ]] || [[ -z "$(ADL_CREDENTIAL)" ]]; then \
