--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -274,9 +274,8 @@ jobs:
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-hdp-server
     params:
-      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
-      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
-      AWS_DEFAULT_REGION: {{aws-region}}
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
       GROUP: gpdb,proxy,profile
       TEST_ENV: {{test-env}}
       HADOOP_CLIENT: HDP
@@ -315,9 +314,8 @@ jobs:
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-ubuntu16-hdp-server
     params:
-      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
-      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
-      AWS_DEFAULT_REGION: {{aws-region}}
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
       GROUP: gpdb,proxy,profile
       TEST_ENV: {{test-env}}
       HADOOP_CLIENT: HDP
@@ -329,7 +327,7 @@ jobs:
 {% endif %}
 
 {% endif %}
-- name: test_pxf_hdp_secure
+- name: test_pxf_hdp_secure_with_impersonation
   plan:
   - aggregate:
     - get: gpdb_src
@@ -363,6 +361,48 @@ jobs:
       AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
       AWS_DEFAULT_REGION: {{aws-region}}
       GROUP: gpdb,proxy
+      IMPERSONATION: true
+      TEST_ENV: {{test-env}}
+      TARGET_OS: centos
+{% if acceptance %}
+      ACCEPTANCE: true
+{% endif %}
+
+- name: test_pxf_hdp_secure_no_impersonation
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+{% if compile_gpdb %}
+      - compile_gpdb_centos6
+{% endif %}
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+{% if compile_gpdb %}
+      passed:
+      - compile_gpdb_centos6
+{% endif %}
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-centos6-hdp-secure
+  - task: test_pxf_secure
+    file: pxf_src/concourse/tasks/test_pxf_secure.yml
+    image: gpdb-pxf-dev-centos6-hdp-secure
+    privileged: true
+    attempts: 2
+    params:
+      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      AWS_DEFAULT_REGION: {{aws-region}}
+      GROUP: gpdb,proxy
+      IMPERSONATION: false
       TEST_ENV: {{test-env}}
       TARGET_OS: centos
 {% if acceptance %}
@@ -429,6 +469,8 @@ jobs:
       file: pxf_src/concourse/tasks/install_hadoop.yml
       image: gpdb-pxf-dev-centos6-hdp-server
       params:
+        ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+        SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
         IMPERSONATION: {{enable-impersonation-multinode}}
         PXF_JVM_OPTS: {{pxf-jvm-opts}}
 {% if pipeline_type == "pxf" %}
@@ -442,9 +484,8 @@ jobs:
     image: gpdb-pxf-dev-centos6-hdp-server
     file: pxf_src/concourse/tasks/test_pxf_multinode.yml
     params:
-      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
-      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
-      AWS_DEFAULT_REGION: {{aws-region}}
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
       GROUP: gpdb,proxy
       TARGET_OS: centos
 {% if acceptance %}
@@ -480,9 +521,8 @@ jobs:
     image: gpdb-pxf-dev-centos6-cdh-server
     attempts: 2
     params:
-      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
-      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
-      AWS_DEFAULT_REGION: {{aws-region}}
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
       GROUP: gpdb,proxy,profile
       TEST_ENV: {{test-env}}
       TARGET_OS: centos
@@ -491,7 +531,7 @@ jobs:
       ACCEPTANCE: true
 {% endif %}
 
-- name: test_pxf_s3
+- name: test_pxf_s3_no_impersonation
   plan:
   - aggregate:
     - get: gpdb_src
@@ -519,11 +559,50 @@ jobs:
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-cdh-server
     params:
-      AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
-      AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
-      AWS_DEFAULT_REGION: {{aws-region}}
-      GROUP: hcfs
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      GROUP: hcfs,s3
       IMPERSONATION: false
+      PROTOCOL: s3
+      TEST_ENV: {{test-env}}
+      TEST_OS: centos
+      TARGET_OS: centos
+{% if acceptance %}
+      ACCEPTANCE: true
+{% endif %}
+
+- name: test_pxf_s3_with_impersonation
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+{% if compile_gpdb %}
+      - compile_gpdb_centos6
+{% endif %}
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+{% if compile_gpdb %}
+      passed:
+      - compile_gpdb_centos6
+{% endif %}
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-centos6-cdh-server
+  - task: test_pxf
+    file: pxf_src/concourse/tasks/test_pxf.yml
+    image: gpdb-pxf-dev-centos6-cdh-server
+    params:
+      ACCESS_KEY_ID: {{tf-machine-access-key-id}}
+      SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
+      GROUP: hcfs,s3
+      IMPERSONATION: true
       PROTOCOL: s3
       TEST_ENV: {{test-env}}
       TEST_OS: centos
@@ -659,8 +738,10 @@ jobs:
     - test_pxf_cdh_centos6
     - test_pxf_adl
     - test_pxf_gs
-    - test_pxf_s3
-    - test_pxf_hdp_secure
+    - test_pxf_s3_no_impersonation
+    - test_pxf_s3_with_impersonation
+    - test_pxf_hdp_secure_with_impersonation
+    - test_pxf_hdp_secure_no_impersonation
     - test_pxf_no_impersonation
     - test_pxf_hdp_multinode_gpdb
     trigger: true
@@ -678,8 +759,10 @@ jobs:
     - test_pxf_cdh_centos6
     - test_pxf_adl
     - test_pxf_gs
-    - test_pxf_s3
-    - test_pxf_hdp_secure
+    - test_pxf_s3_no_impersonation
+    - test_pxf_s3_with_impersonation
+    - test_pxf_hdp_secure_with_impersonation
+    - test_pxf_hdp_secure_no_impersonation
     - test_pxf_no_impersonation
     - test_pxf_hdp_multinode_gpdb
     trigger: true
@@ -690,8 +773,10 @@ jobs:
     - test_pxf_cdh_centos6
     - test_pxf_adl
     - test_pxf_gs
-    - test_pxf_s3
-    - test_pxf_hdp_secure
+    - test_pxf_s3_no_impersonation
+    - test_pxf_s3_with_impersonation
+    - test_pxf_hdp_secure_with_impersonation
+    - test_pxf_hdp_secure_no_impersonation
     - test_pxf_no_impersonation
     - test_pxf_hdp_multinode_gpdb
   - task: package_pxf_rc
