Support Minio storage, minio certification job, script for dev docker image (#76)
* Added minio docker image, test job and setup script

* Removed docker image build from pipeline

* Export minio credentials

* Added minio template, removed core-site.xml updates

* Explicitly export protocol variable

* Do not reset protocol to s3 after minio start

* fixed condition when protocol is not minio

* Setup test bucket

* Added explicit AWS S3 dependency in pom.xml for automation

* Added more AWS dependencies to automation

* Use MINIO env variables for creds

* Added dev docker script and instructions

* updated access variable names

* Alignment, include test_pxf_minio in artifact promotion requirement

* Addressed PR comments

--- a/automation/Makefile
+++ b/automation/Makefile
@@ -26,6 +26,11 @@ else
 	MAVEN_TEST_OPTS+= -o
 endif
 
+ifeq "$(PROTOCOL)" "minio"
+	MINIO=true
+	PROTOCOL=s3
+endif
+
 ifneq "$(PROTOCOL)" ""
 	MAVEN_TEST_OPTS+= -DPROTOCOL=$(PROTOCOL)
 	PROTOCOL_HOME=~/pxf/servers/$(PROTOCOL)
@@ -83,8 +88,12 @@ ifneq "$(PROTOCOL)" ""
 		cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)/; \
 		cp $(PXF_HOME)/templates/user/templates/mapred-site.xml $(PROTOCOL_HOME)/; \
 		if [[ $(PROTOCOL) == s3 ]]; then \
-		    mkdir -p $(PROTOCOL_HOME)-invalid; \
-		    cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)-invalid/; \
+			if [[ "$(MINIO)" == "true" ]]; then \
+				cp $(PXF_HOME)/templates/user/templates/minio-site.xml $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
+				sed -i "s|YOUR_MINIO_URL|http://localhost:9000|" $(PROTOCOL_HOME)/$(PROTOCOL)-site.xml; \
+			fi; \
+			mkdir -p $(PROTOCOL_HOME)-invalid; \
+			cp $(PXF_HOME)/templates/user/templates/$(PROTOCOL)-site.xml $(PROTOCOL_HOME)-invalid/; \
 			if [[ -z "$(ACCESS_KEY_ID)" ]] || [[ -z "$(SECRET_ACCESS_KEY)" ]]; then \
 				echo "AWS Keys (ACCESS_KEY_ID, SECRET_ACCESS_KEY) not set"; \
 				rm -rf $(PROTOCOL_HOME); \
