--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -17,6 +17,7 @@ resource_types:
     repository: ljfranklin/terraform-resource
 
 resources:
+
 - name: ccp_src
   type: git
   source:
@@ -611,6 +612,44 @@ jobs:
       ACCEPTANCE: true
 {% endif %}
 
+- name: test_pxf_minio
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+{% if compile_gpdb %}
+      - compile_gpdb_centos6
+{% endif %}
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+{% if compile_gpdb %}
+      passed:
+      - compile_gpdb_centos6
+{% endif %}
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-centos6-hdp-server
+  - task: test_pxf
+    file: pxf_src/concourse/tasks/test_pxf.yml
+    image: gpdb-pxf-dev-centos6-hdp-server
+    params:
+      GROUP: hcfs
+      IMPERSONATION: false
+      PROTOCOL: minio
+      TEST_ENV: {{test-env}}
+      TEST_OS: centos
+      TARGET_OS: centos
+{% if acceptance %}
+      ACCEPTANCE: true
+{% endif %}
+
 - name: test_pxf_adl
   plan:
   - aggregate:
@@ -738,6 +777,7 @@ jobs:
     - test_pxf_cdh_centos6
     - test_pxf_adl
     - test_pxf_gs
+    - test_pxf_minio
     - test_pxf_s3_no_impersonation
     - test_pxf_s3_with_impersonation
     - test_pxf_hdp_secure_with_impersonation
@@ -759,6 +799,7 @@ jobs:
     - test_pxf_cdh_centos6
     - test_pxf_adl
     - test_pxf_gs
+    - test_pxf_minio
     - test_pxf_s3_no_impersonation
     - test_pxf_s3_with_impersonation
     - test_pxf_hdp_secure_with_impersonation
@@ -773,6 +814,7 @@ jobs:
     - test_pxf_cdh_centos6
     - test_pxf_adl
     - test_pxf_gs
+    - test_pxf_minio
     - test_pxf_s3_no_impersonation
     - test_pxf_s3_with_impersonation
     - test_pxf_hdp_secure_with_impersonation
