Use gpdb-pxf-dev:centos6 as the base image for mapr

--- a/concourse/pipelines/docker-images.yml
+++ b/concourse/pipelines/docker-images.yml
@@ -264,7 +264,7 @@ jobs:
         build: .
         dockerfile: pxf_src/concourse/docker/mapr/Dockerfile
         build_args:
-          BASE_IMAGE: "gpdb-dev:centos6"
+          BASE_IMAGE: "gpdb-pxf-dev:centos6"
 
   - name: docker-gpdb-dev-centos6-hdp-secure
     plan:
