--- a/concourse/docker/mapr/Dockerfile
+++ b/concourse/docker/mapr/Dockerfile
@@ -1,4 +1,6 @@
-FROM pivotaldata/gpdb-dev:centos6
+ARG BASE_IMAGE=gpdb-pxf-dev:centos6
+
+FROM pivotaldata/${BASE_IMAGE} as scratch
 
 RUN rpm --import http://package.mapr.com/releases/pub/maprgpg.key && \
   groupadd -g 5000 mapr ; useradd -g 5000 -u 5000 mapr && echo -e "mapr\nmapr" | passwd mapr && \
