--- a/concourse/settings/perf-settings.yml
+++ b/concourse/settings/perf-settings.yml
@@ -4,7 +4,7 @@ folder-prefix: perf
 perf-scale: 10
 
 enable-impersonation-multinode: true
-pxf-jvm-opts: "-Xmx512m -Xms512m"
+pxf-jvm-opts: "-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/heap_dump -Xmx512m -Xms512m"
 perf-ccp-reap-minutes: 120
 
 perf-gpdb-number-of-nodes: 3
