Add MapR Support for HDFS (#77)
- Runs `hcfs` group in automation for MapR
- Adds CI job for MapR
- We add a fatjar, which is not used in non-MapR tests, but it bundles MapR jars that we need for running PXF as well as automation.

Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>

--- a/automation/Makefile
+++ b/automation/Makefile
@@ -62,6 +62,7 @@ symlink_pxf_jars:
 		for X in $(PXF_HOME)/lib/pxf-*-[0-9]*.jar; do \
 			ln -sf $$X `echo \`basename $$X\` | sed -e 's/-[a-zA-Z0-9.]*.jar/.jar/'`; \
 		done; \
+		touch $(PXF_HOME)/tmp/pxf-extras.jar; \
 	fi
 
 test: symlink_pxf_jars sync_cloud_configs
