--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -12,6 +12,7 @@ groups:
       - test_pxf_cdh_centos6
       - test_pxf_hdp_ubuntu16
       - test_pxf_hdp_multinode_gpdb
+      - test_pxf_mapr_centos6
       - test_pxf_adl
       - test_pxf_gs
       - test_pxf_minio
@@ -29,13 +30,16 @@ groups:
 
   - name: hadoop
     jobs:
-      - test_pxf_hdp_centos6
+      - compile_pxf
       - test_pxf_cdh_centos6
+      - test_pxf_hdp_centos6
       - test_pxf_hdp_ubuntu16
       - test_pxf_hdp_multinode_gpdb
+      - test_pxf_mapr_centos6
 
   - name: cloud
     jobs:
+      - compile_pxf
       - test_pxf_adl
       - test_pxf_gs
       - test_pxf_minio
@@ -44,11 +48,16 @@ groups:
 
   - name: secure
     jobs:
+      - compile_pxf
       - test_pxf_hdp_secure_with_impersonation
       - test_pxf_hdp_secure_no_impersonation
 
   - name: no_impersonation
     jobs:
+      - compile_pxf
+      - test_pxf_adl
+      - test_pxf_gs
+      - test_pxf_minio
       - test_pxf_no_impersonation
       - test_pxf_s3_no_impersonation
       - test_pxf_hdp_secure_no_impersonation
@@ -132,6 +141,13 @@ resources:
     repository: pivotaldata/gpdb-pxf-dev
     tag: centos6-hdp-server
 
+- name: gpdb-pxf-dev-centos6-mapr-image
+  type: docker-image
+  source:
+    repository: pivotaldata/gpdb-pxf-dev
+    tag: centos6-mapr-server
+
+{% if pipeline_type == "pxf" %}
 - name: gpdb-pxf-dev-ubuntu16-hdp-server
   type: docker-image
   source:
@@ -342,6 +358,44 @@ jobs:
       GROUP: gpdb,proxy,profile
       TEST_ENV: {{test-env}}
       HADOOP_CLIENT: HDP
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 6
+{% if acceptance %}
+      ACCEPTANCE: true
+{% endif %}
+
+- name: test_pxf_mapr_centos6
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+{% if compile_gpdb %}
+      - compile_gpdb_centos6
+{% endif %}
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+{% if compile_gpdb %}
+      passed:
+        - compile_gpdb_centos6
+{% endif %}
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-centos6-mapr-image
+  - task: test_pxf
+    privileged: true
+    file: pxf_src/concourse/tasks/test_pxf.yml
+    image: gpdb-pxf-dev-centos6-mapr-image
+    params:
+      GROUP: hcfs
+      TEST_ENV: {{test-env}}
+      HADOOP_CLIENT: MAPR
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
 {% if acceptance %}
@@ -835,6 +889,8 @@ jobs:
     passed:
     - test_pxf_hdp_centos6
     - test_pxf_cdh_centos6
+    - test_pxf_mapr_centos6
+    - test_pxf_hdp_ubuntu16
     - test_pxf_adl
     - test_pxf_gs
     - test_pxf_minio
@@ -857,6 +913,7 @@ jobs:
     passed:
     - test_pxf_hdp_centos6
     - test_pxf_cdh_centos6
+    - test_pxf_mapr_centos6
     - test_pxf_hdp_ubuntu16
     - test_pxf_adl
     - test_pxf_gs
@@ -874,6 +931,7 @@ jobs:
     - test_pxf_hdp_centos6
     - test_pxf_cdh_centos6
     - test_pxf_hdp_ubuntu16
+    - test_pxf_mapr_centos6
     - test_pxf_adl
     - test_pxf_gs
     - test_pxf_minio
