--- a/concourse/settings/perf-settings-10g.yml
+++ b/concourse/settings/perf-settings-10g.yml
@@ -22,8 +22,8 @@ perf-trigger-interval: 24h
 perf-trigger-start: 12:30 PM
 perf-trigger-stop: 12:40 PM
 
-perf-benchmark-adl: false
+perf-benchmark-adl: true
 perf-benchmark-s3: true
-perf-benchmark-gcs: false
-perf-benchmark-gphdfs: false
-perf-benchmark-wasb: false
+perf-benchmark-gcs: true
+perf-benchmark-gphdfs: true
+perf-benchmark-wasb: true
